# fastapi_docker_graphql

./: .gitignore  docker-compose.yml
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/app/: main.py
backend/app/app/db/: base_class.py  session.py
backend/app/app/models/: customer.py
backend/app/app/schemas/: customer.py
